# MedAgent

./: Dockerfile  README.md  app.py  inference.py  logs.txt  main.py  output.txt  pyproject.toml  requirements.txt  spaces.toml  step_c.json  step_d.json  step_e.json  step_f.json  test.py  test_results.txt  test_results_ascii.txt
agents/: patient_agent.py  specialist_agent.py
data/: ddxplus_loader.py  generate_sample_dataset.py  ncd_sampler.py  sample_cases.json
env/: action_handler.py  medenv.py
judge/: llm_judge.py  prompts.py
reward/: accuracy.py  efficiency.py  reward_engine.py  safety.py  treatment.py
schemas/: action_schema.py  observation_schema.py
