[project]
name = "medagent-env"
version = "0.1.0"
description = "OpenEnv-compliant clinical RL environment adapted for Hugging Face Spaces."
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE" }
authors = [{ name = "Kn1ghtofzer0" }]
keywords = ["medical", "rl", "environment", "openenv", "huggingface"]

dependencies = [
    "numpy>=1.26.0",
    "datasets>=2.18.0",
    "requests>=2.30.0",
    "fastapi>=0.110.0",
    "uvicorn>=0.29.0",
    "gymnasium>=0.29.0",
    "pydantic>=2.0.0",
    "gradio>=3.56.2",
]

[tool.hatch.metadata]
allow-direct-requires = true
